# OptiPIM

./: .gitignore  CMakeLists.txt  Makefile  README.md  build_llvm.sh  build_optipim.sh  fig14.sh  fig15.sh  fig9.sh  requirements.txt  test.sh
baseline_mappings/heuristic_1/hbm_baseline/: category.json
baseline_mappings/heuristic_1/simdram_baseline/: category.json
baseline_mappings/heuristic_2/hbm_baseline/: category.json
baseline_mappings/heuristic_2/simdram_baseline/: category.json
cmake/modules/: FindGUROBI.cmake
data/: dram.json  hbm_pim.json  knobs.json
exp_results/fig14/: holistic_results.json
exp_results/fig15/: all_layer_llama.json  holistic_llama.json
exp_results/fig9/: analytical0.csv  analytical1.csv  validation_hbmpim.csv  validation_simdram.csv
experiments_scripts/Fig_10/: parser_trace.py
experiments_scripts/gen_testcases/: create_new_testcases.py  create_new_tests.sh  multi_bank_change.sh
holistic/: calCycle.py  database.py  grouping.py  holistic.py  llm.py  plot_holistic.py  plot_llm.py  run.sh
include/pimopt/Analysis/: ExtractAffineLoopBoundsPass.h  ExtractOpParamsPass.h  GurobiTestPass.h
include/pimopt/Support/: MILP.h
lib/: CMakeLists.txt
lib/Analysis/: CMakeLists.txt  ExtractOpParamsPass.cpp  GurobiTestPass.cpp
lib/Analysis/DataLayout/: CMakeLists.txt  DataLayoutConv2D.cpp  DataLayoutFC.cpp  DataLayoutMILP.cpp  DataLayoutPass.cpp
lib/Analysis/DetailLayout/: CMakeLists.txt  DetailLayoutConv2D.cpp  DetailLayoutFC.cpp  DetailLayoutMILP.cpp  DetailLayoutPass.cpp
lib/Support/: CMakeLists.txt  MILP.cpp
nn_models/: README.md
nn_models/alexnet/: alexnet.linalg.mlir  layer_params.csv  mlir_gen.py  single_layers_mlir_gen.py
nn_models/alexnet/single_layers/: alexnet.l0.conv0.linalg.mlir  alexnet.l1.conv1.linalg.mlir  alexnet.l2.conv2.linalg.mlir  alexnet.l3.conv3.linalg.mlir  alexnet.l4.conv4.linalg.mlir  alexnet.l5.fc0.linalg.mlir
nn_models/bert/: bert.linalg.mlir  layer_params.csv  single_layers_mlir_gen.py
nn_models/bert/single_layers/: bert.l23.fc23.linalg.mlir  bert.l26.fc26.linalg.mlir  bert.l52.fc52.linalg.mlir  bert.l63.fc63.linalg.mlir  bert.l72.fc72.linalg.mlir
nn_models/llama3-14B-1024/: layer_params.csv
nn_models/llama3-14B-1024/single_layers/: llama3-14b-1024.l0.fc0.linalg.mlir  llama3-14b-1024.l4.fc4.linalg.mlir  llama3-14b-1024.l7.fc7.linalg.mlir  llama3-14b-1024.l8.fc8.linalg.mlir
nn_models/llama3-14B-128/: layer_params.csv
nn_models/llama3-14B-256/: layer_params.csv
nn_models/llama3-14B-512/: layer_params.csv  llama3-14b-config.json
nn_models/llama3-8B-1024/: layer_params.csv
nn_models/llama3-8B-128/: layer_params.csv
nn_models/llama3-8B-256/: layer_params.csv
nn_models/llama3-8B-512/: layer_params.csv
nn_models/resnet152/: layer_params.csv  mlir_gen.py  resnet152.linalg.mlir  single_layers_mlir_gen.py
nn_models/resnet50/: layer_params.csv  mlir_gen.py  output.linalg.mlir  single_layers_mlir_gen.py
nn_models/unet/: layer_params.csv  mlir_gen.py  single_layers_mlir_gen.py
nn_models/vgg16/: layer_params.csv  mlir_gen.py  single_layers_mlir_gen.py  vgg16.linalg.mlir
simulator/: .gitignore  README.md  hbmpim_config.yaml  simdram_config.yaml
simulator/.ipynb_checkpoints/: pim_config-checkpoint.yaml
simulator/src/: CMakeLists.txt
simulator/src/base/: request.h  (+1 more)
tools/: CMakeLists.txt  pim-opt.cpp
validation/: correlation_1.py  correlation_1.sh  correlation_2.py  correlation_2.sh  validation.py
validation/analytical_modeling/: analytical.py  generate_random_traces.py  get_trace_perf.py  parser_trace.py
(+471 files in other folders)
